== 0.0.5 (in Git)
  * major enhancements
    * choose between Google Closure and Yahoo! YUI Compressor

== 0.0.4 2010-01-30
  * major enhancements
    * compression and validation performed by instances rather the class
  * minor enhancements
    * don't growl and raise errors on validation, just display errors
    * internal refactoring

== 0.0.3 2010-01-25
  * major enhancements
    * added YUI compressor to compress JavaScript and CSS

== 0.0.2 2010-01-25
  * bug fixes
    * fixed path

== 0.0.1 2010-01-25
  * validates JavaScript and HTML (CSS coming soon)
  