@@ -5,8 +5,9 @@ $LOAD_PATH.unshift(dir) unless $LOAD_PATH.include?(dir)
 
 require 'epic'
 
-command = ARGV[0]
-file = ARGV[1]
+command = ARGV[0].to_s
+file = ARGV[1].to_s
+destination = ARGV[2]
 
 Epic::Validator::Base.configure do |config|
   config.base_path = "./"
@@ -18,7 +19,11 @@ if command.downcase == "validate" || command.downcase == "v"
     Epic::Validator::JavaScript.new.validate(file)
   end
 elsif command.downcase == "compress" || command.downcase == "c"
-  Epic::Compressor.new(file).compress
+  params = {}
+  if destination
+    params[:destination] = destination
+  end
+  Epic::Compressor.new(file).compress(params)
 end
 
 system "rm -rf ./tmp"
