@@ -1,6 +1,7 @@
 == 0.0.5 (in Git)
   * major enhancements
     * choose between Google Closure and Yahoo! YUI Compressor
+    * compress from command line
 
 == 0.0.4 2010-01-30
   * major enhancements
